# Niyanta-Ecosystem

./: README.md  docker-compose.yml
AutonomousMobileRobot/src/l1-parv2031/testbed_bringup/: CMakeLists.txt
AutonomousMobileRobot/src/l1-parv2031/testbed_bringup/launch/: testbed_full_bringup.launch.py
AutonomousMobileRobot/src/l1-parv2031/testbed_bringup/maps/: testbed_world.yaml
AutonomousMobileRobot/src/l1-parv2031/testbed_description/rviz/: full_bringup.rviz
AutonomousMobileRobot/src/l1-parv2031/testbed_navigation/: CMakeLists.txt
AutonomousMobileRobot/src/l1-parv2031/testbed_navigation/config/: amcl_params.yaml  nav2_params.yaml
AutonomousMobileRobot/src/l1-parv2031/testbed_navigation/launch/: localization.launch.py
AutonomousMobileRobot/src/l1-parv2031/testbed_navigation/src/: takshak_bridge.py
AutonomousNavigation/: .dockerignore  Dockerfile
AutonomousNavigation/src/l1-parv2031/: README.md
AutonomousNavigation/src/l1-parv2031/testbed_gazebo/launch/: spawn_playground.launch.py
AutonomousNavigation/src/l1-parv2031/testbed_navigation/: package.xml
AutonomousNavigation/src/l1-parv2031/testbed_navigation/launch/: full_navigation.launch.py  map_loader.launch.py  navigation.launch.py
AutonomousPowerGrid/: .dockerignore  Dockerfile  README.md
AutonomousPowerGrid/src/: CMakeLists.txt
AutonomousPowerGrid/src/cpp/: rl_bridge.h  simulator.cpp
AutonomousPowerGrid/src/python/: power_grid_env.py  train_sac.py
AutonomousPowerGrid/src/python/logs_sac/: run_1775403485.csv  run_1775411073.csv  run_1775419472.csv  run_1775428705.csv  run_1778400954.csv  run_1778401093.csv  run_1778401413.csv  run_1778426298.csv  run_1778427648.csv  run_1778428222.csv  run_1778429260.csv  run_1778433628.csv  run_1781885172.csv  run_1781885557.csv  run_1782052663.csv
Chess_Engine/: CMakeLists.txt  README.md
Chess_Engine/src/: ai.c  ai.h  game.c  game.h  globals.c  globals.h  gui.c  gui.h  main.c  wasm_bridge.c
Niyanta/: Dockerfile  package-lock.json  package.json  test_chess.js
Niyanta/public/: chess_engine.js  chess_engine.wasm  chess_worker.js
Niyanta/src/app/: TelemetryProvider.tsx  globals.css  layout.tsx  page.tsx
Niyanta/src/app/api/stream/: route.ts
Niyanta/src/app/api/takshak/: route.ts
Niyanta/src/app/components/: AMRPanel.tsx  ChessPanel.tsx  PowerGridPanel.tsx  TakshakMonitor.tsx
TakshakDB/: CMakeLists.txt  Dockerfile  README.md  takshak.aof
TakshakDB/src/: aof.cpp  aof.h  lru_cache.cpp  lru_cache.h  parser.cpp  parser.h  pubsub.cpp  pubsub.h  server.cpp
